Updated implementation for GameApp class